@startuml mibuto

skinparam class {
  BackgroundColor White
  ArrowColor #666666
  BorderColor #666666
}

left to right direction

class Users {
  + id: Integer <<PK>>
  --
  username : String
  password : String
  full_name : String
  qualification : String
  dob : Date
  active : Boolean
}

class Roles {
  + id: Integer <<PK>>
  --
  name : String
  description : String
}

class Subjects {
  + id: Integer <<PK>>
  --
  name : String
  description : Text
  created_at : Datetime
}

class Chapters {
  + id: Integer <<PK>>
  --
  name : String
  description : Text
  subject_id : Integer
  created_at : Datetime
}

class Quizzes {
  + id: Integer <<PK>>
  --
  title : String
  chapter_id : Integer
  date_of_quiz : Datetime
  time_duration : Integer
  remarks : Text
  created_at : Datetime
}

class Questions {
  + id: Integer <<PK>>
  --
  quiz_id : Integer
  question_statement : Text
  option1 : String
  option2 : String
  option3 : String
  option4 : String
  correct_option : Integer
}

class Scores {
  + id: Integer <<PK>>
  --
  user_id : Integer
  quiz_id : Integer
  score : Integer
  total_questions : Integer
  timestamp : Datetime
}

' Junction Tables
class users_roles <<junction>> {
    user_id: Integer <<FK>>
    role_id: Integer <<FK>>
}

' Relationships
Users "1" *-- "*" users_roles
Roles "1" *-- "*" users_roles
Users "1" -- "*" Scores
Users "1" -- "*" Subjects
Subjects "1" -- "*" Chapters
Chapters "1" -- "*" Quizzes
Quizzes "1" -- "*" Questions
Quizzes "1" -- "*" Scores

@enduml